@@ -1,3 +1,9 @@
+2005-11-01  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/ephy-window.c: (update_popups_tooltips):
+
+	Use curly quotes.
+
 2005-10-31  Christian Persch  <chpe@cvs.gnome.org>
 
 	* lib/ephy-dbus.c:
